[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Begok v15_2015___free.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUDBureau.gd" type="Script" id=2]
[ext_resource path="res://assets/planets/grey2.png" type="Texture" id=3]
[ext_resource path="res://assets/planets/blue.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[node name="HUDBureau" type="Node2D"]
script = ExtResource( 2 )

[node name="AffichMissionButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 532.0
margin_top = 141.0
margin_right = 608.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 9 )
text = "show"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_left = 18.0
margin_top = 337.0
margin_right = 58.0
margin_bottom = 359.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Prestige" type="Label" parent="."]
margin_left = 110.0
margin_top = 338.0
margin_right = 150.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 2
__meta__ = {
"_edit_group_": true
}

[node name="FinishMissionButton" type="Button" parent="."]
margin_left = 525.0
margin_top = 181.0
margin_right = 624.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 7 )
text = "valider"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Fin" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 101.0
margin_top = 122.5
margin_right = 517.0
margin_bottom = 201.5
custom_fonts/font = SubResource( 11 )
text = "thanks for playing"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NewMission" type="Button" parent="."]
margin_left = 255.0
margin_top = 295.0
margin_right = 348.0
margin_bottom = 315.0
text = "new mission"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SymboleMoney" type="Sprite" parent="."]
position = Vector2( 86, 345 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="SymbolePrestige" type="Sprite" parent="."]
position = Vector2( 171, 343 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Objectifs" type="RichTextLabel" parent="."]
margin_left = 519.0
margin_top = 48.0
margin_right = 621.0
margin_bottom = 110.0
custom_fonts/mono_font = SubResource( 12 )
text = "objectif"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AffichMissionButton" to="." method="_on_AffichMissionButton_pressed"]
[connection signal="pressed" from="FinishMissionButton" to="." method="_on_FinishMissionButton_pressed"]
[connection signal="pressed" from="NewMission" to="." method="_on_NewMission_pressed"]
